# portfolio

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/data/: portfolio.sqlite
backend/data/backups/: portfolio-20260616-171651-349302-startup.sqlite  portfolio-20260618-142146-929555-startup.sqlite
backend/src/portfolio_app/: asgi.py  config.py  db.py  finance.py  main.py  migrations.py  models.py  repositories.py  schema.sql
backend/src/portfolio_app/api/: __init__.py  accounts.py  assets.py  backups.py  canslim.py  dependencies.py  errors.py  goals.py  growth.py  growth_history.py  imports.py  market_data.py  summary.py  toss_portfolio.py  toss_responses.py  transactions.py  validation.py
backend/src/portfolio_app/services/: backup_scheduler.py  backups.py  canslim.py  fx_rates.py  goals.py  growth.py  growth_history.py  imports.py  market_candles.py  market_data.py  market_sync_scheduler.py  stock_metadata.py  summary.py  toss_http.py  toss_order_imports.py  toss_payloads.py  toss_portfolio.py  toss_summary.py  transactions.py
backend/tests/: test_api.py  test_api_dependencies.py  test_api_errors.py  test_api_validation.py  test_backup_scheduler.py  test_backups.py  test_canslim.py  test_config.py  test_db.py  test_finance.py  test_fx_rate_provider.py  test_goals.py  test_growth.py  test_growth_api.py  test_growth_history.py  test_imports.py  test_market_candles.py  test_market_data.py  test_market_data_payload_helpers.py  test_market_data_service.py  test_market_data_test_structure.py  test_market_sync_scheduler.py  test_packaging.py  test_removed_features.py  test_repositories.py  test_stock_metadata.py  test_summary.py  test_toss_api_responses.py  test_toss_http.py  test_toss_only_architecture.py  test_toss_order_imports.py  test_toss_payloads.py  test_toss_portfolio.py  test_toss_portfolio_source.py  test_toss_summary.py  test_transactions.py
docs/: algorithmic-review-findings.md  current-implementation-flow.md  db_erd.md  multi-broker-integration-strategy.md  namuh-open-api-integration.md  toss-open-api-integration.md  transactions-growth-review.md
frontend/: index.html  package-lock.json  package.json
(+79 files in other folders)
