[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-app-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136,<0.137",
  "httpx>=0.28,<0.29",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.12,<3",
  "uvicorn[standard]>=0.38,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10",
  "pytest-asyncio>=0.23",
  "pytest-cov>=7,<8",
  "pytest-httpx>=0.30",
  "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.setuptools.package-data]
portfolio_app = ["schema.sql"]
